name = "my_astro_package"
version = "0.0.1"
description = "Astro test package"
authors = ["Karina Bikmaeva",  email="bikmaeva-karina@mail.ru" ]

readme = "README.md"
dependencies = [
  'opencv-python > 4',
]

requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/KarinaBikmaeva/astrosite_test.git"
Issues = "https://github.com/KarinaBikmaeva/astrosite_test.git/issues"