[project]
name = "my_astro_package"
version = "0.0.2"
authors = [
  {name="Karina Bikmaeva",  email="bikmaeva-karina@mail.ru"},
]
description = "Astro test package"
readme = "README.md"
dependencies = [
  'opencv-python > 4',
  pandas>=1.5.0,
  numpy>=1.24.0,
  matplotlib>=3.7.0,
  pathlib2>=2.3.6
]

requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/KarinaBikmaeva/astrosite_test.git"
Issues = "https://github.com/KarinaBikmaeva/astrosite_test.git/issues"